# doc-intelligence-rag-assistant

./: .env.template  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: golden_set.yaml  params.yaml
configs/prompts/: rag_v1.yaml
docs/: architecture.md  model_card.md  ragas_report.json  risk_log.md  runbook.md
scripts/: create_contracts.py  evaluate.py  fix_mypy.py  ingest.py  init_db.sql
src/agents/: knowledge_ops_agent.py  schemas.py  tools.py
src/cache/: semantic_cache.py
src/config/: logging_config.py  settings.py
src/evaluation/: ragas_runner.py
src/generation/: generator.py  prompts.py
src/ingestion/: chunker.py  contracts.py  embedder.py  indexer.py  loader.py
src/monitoring/: cost_monitor.py  retrieval_monitor.py
src/retrieval/: dense.py  hybrid.py  pipeline.py  reranker.py  sparse.py
src/serving/: app.py  guardrails.py  schemas.py
src/ui/: streamlit_app.py
tests/scenarios/: test_agent_scenarios.py
tests/unit/: test_contracts.py  test_guardrails.py  test_prompts.py
