[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "doc-intelligence-rag-assistant"
version = "0.1.0"
description = "Production RAG system for legal document intelligence"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv/", "tests/"]

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*"]

[[tool.mypy.overrides]]
module = "src.config.logging_config"
disable_error_codes = ["return-value"]

[[tool.mypy.overrides]]
module = [
    "src.ingestion.loader",
    "src.ingestion.chunker",
    "src.ingestion.embedder",
    "src.ingestion.indexer",
]
disable_error_codes = ["no-untyped-call", "no-any-return"]

[[tool.mypy.overrides]]
module = "src.config.settings"
disable_error_codes = ["call-arg"]